name:                instagram-dl
version:             0.1.0.0
synopsis:            Downloads images from Instagram
description:         Please see README.md
homepage:            http://github.com/githubuser/instagram-dl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          incredible.angst@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , resourcet
                     , http-types
                     , conduit
                     , conduit-extra
                     , xml-conduit
                     , html-conduit
                     , http-conduit
                     , safe
                     , text
  default-language:    Haskell2010

executable instagram-dl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -optc-Os -O2
  build-depends:       base
                     , instagram-dl
                     , cmdargs
  default-language:    Haskell2010

test-suite instagram-dl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , instagram-dl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/instagram-dl
